apps/galfiends/postgrest/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-primary
  namespace: galfiends
spec:
  serviceName: db-primary
  replicas: 1
  selector:
    matchLabels:
      app: db-primary
  template:
    metadata:
      labels:
        app: db-primary
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-primary-data
---
apiVersion: v1
kind: Service
metadata:
  name: db-primary
  namespace: galfiends
spec:
  selector:
    app: db-primary
  ports:
    - port: 5432
      targetPort: 5432
