apps/galfiends/postgrest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgrest
  namespace: galfiends
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.galfiends.kinforgeworks.com
  rules:
    - host: api.galfiends.kinforgeworks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgrest
                port:
                  number: 3000
